Refactor: toList() 축소화